--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
     <string name="navigation">Navigation</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="calendar">Calendar</string>
+    <string name="assignment">Assignment</string>
+    <string name="teams">Teams</string>
+    <string name="chats">Chats</string>
+    <string name="notification">Notification</string>
 
 </resources>
