--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="teams">Teams</string>
     <string name="chats">Chats</string>
     <string name="notification">Notification</string>
+    <string name="search" />
 
 </resources>
