--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="teams">Teams</string>
     <string name="chats">Chats</string>
     <string name="notification">Notification</string>
+    <string name="search" />
     <string name="create_account">Create account</string>
     <string name="regardless_of_the_pandemic_technology_still_connect_us">Regardless of the pandemic,<br /> Technology still unites us</string>
     <string name="password">Password</string>
