--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="calendar">Calendar</string>
     <string name="assignment">Assignment</string>
-    <string name="teams">Teams</string>
+    <string name="rooms">Rooms</string>
     <string name="chats">Chats</string>
     <string name="notification">Notification</string>
     <string name="search" />
