--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="confirm_password">Confirm Password</string>
     <string name="next">Next</string>
     <string name="app_logo">app logo</string>
+    <string name="profile">Profile</string>
 
 </resources>
